exports[`test renders error version 1`] = `
<div style={{...}}>
<Err error={[Function]} msg="Looks like there was a problem" />
;
</div>
`;

exports[`test renders loading version 1`] = `
<div style={{...}}>
<Loading msg="Updating your password..." />
;
</div>
`;

exports[`test renders success version 1`] = `<Success msg="Your password has been updated!" />`;

exports[`test renders with props 1`] = `<Layout submit={[Function]} save={[Function]} state={{...}} />`;
